# cpp-sample-app

./: CMakeLists.txt  README.md  codefresh.yml
dev/: Dockerfile
src/: CMakeLists.txt  point.cpp  point.h  rect.cpp  rect.h  size.cpp  size.h
tests/: CMakeLists.txt  point_test.cpp  rect_test.cpp  size_test.cpp
